<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/teal_700"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNum1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvNum2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn7"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num7"/>

            <Button
                android:id="@+id/btnNum8"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num8"/>

            <Button
                android:id="@+id/btnNum9"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num9" />

            <Button
                android:id="@+id/btnSuma"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/operacion_suma" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnNum4"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num4"/>

            <Button
                android:id="@+id/btnNum5"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num5"/>

            <Button
                android:id="@+id/btnNum6"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num6" />

            <Button
                android:id="@+id/btnResta"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/operacion_resta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnNum1"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num1"/>

            <Button
                android:id="@+id/btnNum2"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num2"/>

            <Button
                android:id="@+id/btnNum3"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num3" />

            <Button
                android:id="@+id/btnMultiplicacion"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/operacion_multiplicacion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnNum0"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/num0"/>

            <Button
                android:id="@+id/btnResult"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/result"/>

            <Button
                android:id="@+id/btnBorrar"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/borrar" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_marginHorizontal="3dp"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/operacion_division" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>